# diskscope

./: Cargo.toml  LICENSE  README.md  env.sh  install.sh
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml
app/src/: main.rs  ui.rs
app/src/ui/: actions.rs  draw.rs  mod.rs  rows.rs  scanning.rs  views.rs
core/: Cargo.toml
core/src/: category.rs  disk.rs  format.rs  lib.rs  reclaim.rs  scan.rs
core/tests/: scan_e2e.rs
data/: dev.diskscope.DiskScope.desktop
packaging/: install.sh
