# Workspace root. Two crates:
#   core/ — pure scan engine + formatting (no GTK; fully unit/E2E tested)
#   app/  — GTK4 + libadwaita front-end over the core
[workspace]
resolver = "2"
members = ["core", "app"]

[workspace.package]
version = "0.1.0-alpha.2"
edition = "2024"
license = "GPL-3.0-or-later"
