[package]
name = "diskscope-core"
description = "Pure, GUI-independent disk-usage scanning engine"
version.workspace = true
edition.workspace = true
license.workspace = true

# Exposed as `diskscope` so consumers `use diskscope::...`.
[lib]
name = "diskscope"
path = "src/lib.rs"

[dependencies]
libc = "0.2"
# Work-stealing parallelism for the directory walk: stat-bound scans of large
# (often near-full) trees overlap their I/O across cores instead of serialising.
rayon = "1"

[dev-dependencies]
tempfile = "3"
